--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,24 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --one: #ff0000;
+  --color-two: #ff0000;
+  --color-three: 255 00 00;
+  --color-four: 255 00 00;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  /* Not self-referencing, not using rgb() ✅ */
+  --color-one: var(--one);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+  /* Self-referencing, Not using rgb() ✅ */
+  --color-two: var(--color-two);
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* Self-referencing, not using rgb() ✅ */
+  --color-three: var(--color-three);
+
+  /* Self-referencing, using rgb() ❌ */
+  /* This silently fails and breaks all IntelliSense. */
+  --color-three: rgb(var(--color-three));
+  /* Comment 👆 out and Reload VS Code to get IntelliSense working again */
 }
